Identify bugs: December height, white space between cell widths, default colors not on scale

--- a/mystyle.css
+++ b/mystyle.css
@@ -8,7 +8,7 @@ main {
 }
   
 svg {
-    background-color: ghostwhite;
+    background-color: darkgrey;
 }
   
 #title p {
